--- a/index.html
+++ b/index.html
@@ -42,12 +42,16 @@
         </li>
       </ul>
   
+
+      <!--task-2-->
+      <ul id="ingredients"></ul>
+
     
 
 
 
 
-    <script type="module" src='./task-1.js'></script>
+    <!--<script type="module" src='./task-1.js'></script>-->
     <script type="module" src='./task-2.js'></script>
     <script type="module" src='./task-3.js'></script>
     <script type="module" src='./task-4.js'></script>
