--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@
       <!--task-3-->
       <ul id="gallery"></ul>
 
+      <!--task-4-->
+      <div id="counter">
+        <button type="button" data-action="decrement">-1</button>
+        <span id="value">0</span>
+        <button type="button" data-action="increment">+1</button>
+      </div>
+
     
 
 
@@ -56,7 +63,7 @@
 
     <!--<script type="module" src='./task-1.js'></script>-->
     <!--<script type="module" src='./task-2.js'></script>-->
-    <script type="module" src='./task-3.js'></script>
+    <!--<script type="module" src='./task-3.js'></script>-->
     <script type="module" src='./task-4.js'></script>
     <script type="module" src='./task-5.js'></script>
     <script type="module" src='./task-6.js'></script>
