--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
       <input type="text" placeholder="Ваше имя?" id="name-input" />
       <h1>Привет, <span id="name-output">незнакомец</span>!</h1>
 
+      <!--task-6-->
+      <input
+       type="text"
+       id="validation-input"
+       data-length="6"
+       placeholder="Введи 6 символов"
+      />
+
 
 
 
@@ -67,7 +75,7 @@
     <!--<script type="module" src='./task-2.js'></script>-->
     <!--<script type="module" src='./task-3.js'></script>-->
     <!--<script type="module" src='./task-4.js'></script>-->
-    <script type="module" src='./task-5.js'></script>
+    <!--<script type="module" src='./task-5.js'></script>-->
     <script type="module" src='./task-6.js'></script>
     <script type="module" src='./task-7.js'></script>
     <script type="module" src='./task-8.js'></script>
