--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
        placeholder="Введи 6 символов"
       />
 
+      <!--task-7-->
+      <input id="font-size-control" type="range" />
+      <br />
+      <span id="text">Абракадабра!</span>
+
 
 
 
@@ -76,7 +81,7 @@
     <!--<script type="module" src='./task-3.js'></script>-->
     <!--<script type="module" src='./task-4.js'></script>-->
     <!--<script type="module" src='./task-5.js'></script>-->
-    <script type="module" src='./task-6.js'></script>
+    <!--<script type="module" src='./task-6.js'></script>-->
     <script type="module" src='./task-7.js'></script>
     <script type="module" src='./task-8.js'></script>
 </body>
