--- a/index.html
+++ b/index.html
@@ -76,7 +76,14 @@
       <span id="text">Абракадабра!</span>
 
 
+      <!--task-8-->
+      <div id="controls">
+        <input type="number" min="0" max="100" step="1" />
+        <button type="button" data-action="render">Создать</button>
+        <button type="button" data-action="destroy">Очистить</button>
+      </div>
       
+      <div id="boxes"></div>
 
 
 
