--- a/index.html
+++ b/index.html
@@ -94,6 +94,6 @@
     <script type="module" src='./task-5.js'></script>
     <script type="module" src='./task-6.js'></script>
     <script type="module" src='./task-7.js'></script>
-    <script type="module" src='./task-8.js'></script>
+    <!--<script type="module" src='./task-8.js'></script>-->
 </body>
 </html>
